--- a/_config.yml
+++ b/_config.yml
@@ -12,17 +12,17 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes@4.15.1"
-minimal_mistakes_skin    : "haxor" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark" #"dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "H4ckNet | Ciberseguridad y Hacking Ético"
+title                    : "Ciberseguridad y Hacking Ético"
 title_separator          : "-"
-name                     : "S4vitar"
-description              : "Artículos sobre ciberseguridad, CTFs e investigaciones"
-url                      : "https://s4vitar.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : "ARgoN"
+description              : "Artículos y Apuntes sobre ciberseguridad"
+url                      : "https://Dname24.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "s4vitar/s4vitar.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "Dname24/Dname24.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 #logo                     : "/assets/images/masthead.png"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true # true, false (default)
@@ -101,9 +101,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "S4vitar"
+  name             : "ARgoN"
   avatar           : "/assets/images/avatar.png"
-  bio              : "CyberSecurity Analyst at ElevenPaths / OSCP / OSWP / eWPTxv2 / eJPT / eCPPTv2 / CPHE / CHEE"
+  bio              : "CyberSecurity Analyst / CPHE / CHEE"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
@@ -112,23 +112,23 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "s4vitar"
+  github           : "Dname24"
   gitlab           :
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "s4vitar" # (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : "https://www.linkedin.com/in/diego-eduardo-ilave-vasquez-793436229" # (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : "s4vitar"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://youtube.com/c/s4vitar"
+  youtube          : 
 
 
 # Reading Files
