--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Diego Ilave"
   avatar           : "/assets/images/avatar.png"
-  bio              : "CyberSecurity Analyst / CPHE / CHEE"
+  bio              : "CiberSecurity Analyst / CHE "
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
